add some configuration file

--- a/tornado/trade.conf
+++ b/tornado/trade.conf
@@ -1,17 +1,6 @@
 [common]
 query_loop_interval=3
 
-[wechat_trade_common]
-server=https://openapi.wechat.com/gateway.do
-app_id=2017041806798698
-pid=2088621843761075
-sign_type=RSA2
-charset=UTF-8
-version=1.0
-format=json
-alipay_sdk=alipay-sdk-java-dynamicVersionNo
-private_key_file=private_key.pem
-
 [alipay_trade_common]
 server=https://openapi.alipay.com/gateway.do
 app_id=2017041806798698
@@ -35,4 +24,19 @@ seller_id=
 sys_service_provider_id=2088100200300400500
 timeout_express=5m
 
+
+[wxpay_trade_common]
+server=https://api.mch.weixin.qq.com/pay/unifiedorder
+qr_parser_url=http://paysdk.weixin.qq.com/example/qrcode.php
+# qr_prefix is used for wxpay prepay method
+qr_prefix=weixin://wxpay/bizpayur
+app_id=wx426b3015555a46be
+key=8934e7d15453e97507ef794cf7b0519d
+mch_id=1900009851
+
+[wxpay_order]
+trade_type=NATIVE
+interval=600
+# for wxpay, the notify_url belongs to ordre
+notify_url=http://47.90.6.240:8888/order/confirm/wxpay_callback
 
